fix bug scroll on iOS browsers
Bug: Only on iOS browsers the "project" div block doesn't scroll properly, crashes immediately.
But by disabling the img_presentation block, scrolling works again.
the img_presentation block has a 3D transform, maybe that's why.

Solution: when a project is open, the img gets "display none"

--- a/style/style.css
+++ b/style/style.css
@@ -153,6 +153,9 @@ i{
 .img_presentation{
     margin-left: 266px;
 }
+body:has(.projectactive) .img_presentation{
+    display: none;
+}
 .photo_presentation{
     width: 100vw;
     max-width: 450px;
